--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Acceso Denegado</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <h1>Acceso Denegado</h1>
-    <hr />
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>AuthApp</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="styles.34095d4a04b78c3c1776.css"></head>
+<body>
+  <app-root></app-root>
+<script src="runtime.3f1c75805d51f4bd312a.js" defer></script><script src="polyfills.8c151b8375e767ff858f.js" defer></script><script src="main.e44ac7bd3bb30cc53a14.js" defer></script></body>
 </html>
